tests/errors/runtime.vibe
def div_by_zero
  1 / 0
end

def mod_by_zero
  1 % 0
end

def array_non_integer_index
  [1, 2, 3]["x"]
end

def string_non_integer_index
  "hello"["x"]
end

def index_unsupported_type
  1[0]
end

def method_missing
  1.non_existent_method
end

def nil_method
  nil.foo
end
